reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__scheduler.rs_line_1539_col_9_001.log

*** crates/tracewake-core/src/scheduler.rs:1539:9: replace no_human::build_window_passive_need_events -> Vec<EventEnvelope> with vec![Default::default()]

*** mutation diff:
--- crates/tracewake-core/src/scheduler.rs
+++ replace no_human::build_window_passive_need_events -> Vec<EventEnvelope> with vec![Default::default()]
@@ -1531,103 +1531,17 @@
         process_id: &ProcessId,
         actor_id: &ActorId,
         window: &DayWindow,
         content_manifest_id: &ContentManifestId,
         need_kind: NeedKind,
         delta: i32,
         elapsed_ticks: u64,
     ) -> Vec<EventEnvelope> {
-        let mut events = build_need_delta_and_threshold_events(
-            NeedDeltaEventSpec {
-                event_id: EventId::new(format!(
-                    "event.no_human_passive_need_delta.{}.{}.{}",
-                    window.window_id,
-                    actor_id.as_str(),
-                    need_kind.stable_id()
-                ))
-                .unwrap(),
-                threshold_event_id: EventId::new(format!(
-                    "event.no_human_need_threshold.{}.{}.{}",
-                    window.window_id,
-                    actor_id.as_str(),
-                    need_kind.stable_id()
-                ))
-                .unwrap(),
-                tick: window.start_tick,
-                ordering_key: OrderingKey::new(
-                    window.start_tick,
-                    SchedulePhase::NoHumanProcess,
-                    SchedulerSourceId::Process(process_id.clone()),
-                    ProposalSequence::new(0),
-                    ActionId::new("passive_need_delta").unwrap(),
-                    vec![
-                        actor_id.as_str().to_string(),
-                        window.window_id.clone(),
-                        need_kind.stable_id().to_string(),
-                    ],
-                    format!(
-                        "before_decision:{}:{}:{}",
-                        window.window_id,
-                        actor_id.as_str(),
-                        need_kind.stable_id()
-                    ),
-                ),
-                content_manifest_id: content_manifest_id.clone(),
-                causes: vec![EventCause::Process(process_id.clone())],
-                actor_id: actor_id.clone(),
-                proposal_id: None,
-                process_id: Some(process_id.clone()),
-                participants: vec![actor_id.to_string()],
-                need_kind,
-                delta,
-                elapsed_ticks,
-                cause_kind: "tick_delta".to_string(),
-                cause_action_id: None,
-                extra_payload: vec![PayloadField::new("window_id", window.window_id.as_str())],
-                delta_effects_summary: format!(
-                    "{} changed by {} before {} decision",
-                    need_kind.stable_id(),
-                    delta,
-                    window.window_id
-                ),
-                threshold_effects_summary: format!(
-                    "{} crossed threshold before {} decision",
-                    need_kind.stable_id(),
-                    window.window_id
-                ),
-            },
-            current_value,
-        );
-        for event in &mut events {
-            if event.event_type != EventKind::NeedThresholdCrossed {
-                continue;
-            }
-            let severe_need_interrupts = event
-                .payload
-                .iter()
-                .any(|field| field.key == "to_band" && field.value == "severe")
-                && has_active_intention;
-            event
-                .payload
-                .push(PayloadField::new("window_id", window.window_id.as_str()));
-            event.payload.push(PayloadField::new(
-                "severe_need_interrupts_active_intention",
-                severe_need_interrupts.to_string(),
-            ));
-            event.payload.push(PayloadField::new(
-                "interruption_cause",
-                if severe_need_interrupts {
-                    "severe_need_pressure"
-                } else {
-                    "none"
-                },
-            ));
-        }
-        events
+        vec![Default::default()] /* ~ changed by cargo-mutants ~ */
     }
 
     fn append_and_apply_agent_event(
         log: &mut EventLog,
         agent_state: &mut AgentState,
         event: EventEnvelope,
     ) -> EventEnvelope {
         let appended = log.append(event).expect("agent event is appendable");


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/scheduler.rs` has changed (1781905315.567925292s, 5s after last build at 1781905310.659925162s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused imports: `NeedDeltaEventSpec` and `build_need_delta_and_threshold_events`
   --> crates/tracewake-core/src/scheduler.rs:222:9
    |
222 |         build_need_delta_and_threshold_events, NeedDeltaEventSpec,
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1539:14
     |
1539 |         vec![Default::default()] /* ~ changed by cargo-mutants ~ */
     |              ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1539:14
     |
1539 |         vec![Default::default()] /* ~ changed by cargo-mutants ~ */
     |              ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
